fixing spacing issue

--- a/app/assets/stylesheets/ualib-home.scss
+++ b/app/assets/stylesheets/ualib-home.scss
@@ -6,20 +6,20 @@
 
 @media (min-width: 492px){
 	#top{
-		padding-top: 100px;
+		padding-top: 70px;
 	}
 }
 
 
 @media (min-width: 768px){
 	#top{
-		padding-top: 220px;
+		padding-top: 190px;
 	}
 }
 
 @media (min-width: 992px){
 	#top{
-		padding-top: 340px;
+		padding-top: 310px;
 	}
 }
 
